js/src/tests/test262/built-ins/Error/prototype/S15.11.4_A2.js
Error
.
prototype
.
toString
=
Object
.
prototype
.
toString
;
var
__tostr
=
Error
.
prototype
.
toString
(
)
;
if
(
__tostr
!
=
=
"
[
object
Object
]
"
)
{
ERROR
(
'
#
1
:
Error
.
prototype
.
toString
=
Object
.
prototype
.
toString
;
__tostr
=
Error
.
prototype
.
toString
(
)
;
__tostr
=
=
=
"
[
object
Object
]
"
.
Actual
:
'
+
__tostr
)
;
}
reportCompare
(
0
0
)
;
